--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 .main{
+    background-color: white;
     display: flex;
     border: 1px solid;
     position: absolute;
@@ -6,7 +7,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 50px;
-    box-shadow: 5px 5px 5px 5px #888888;
+    /*box-shadow: 5px 5px 5px 5px #888888;*/
     margin: auto;
     border-radius: 30px;
 }
